--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,3 +5,41 @@
 }
 
 // TODO
+:root {
+  --pink-500: #FF57B2;
+  --white-50: #F8F8F8;
+  --black-900:#1A1D23;
+  --gray-100: #D7D7D7;
+  --gray-300: #BBBBBB;
+
+}
+@media(max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media(max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--black-900);
+  color: var(--white);
+}
+
+body, input, select, textarea, button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+//fonts -> inter(bold 600; 800; & regular 400)
