--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,64 @@
-// TODO
+.banner {
+  width:100%;
+  height: 25rem;
+  object-fit: cover;
+}
+.post{
+  h2 {
+    color: var(--white-50);
+    font: 600 2.5rem "Inter";
+    margin-bottom: 24px;
+  }
+
+  .postHeader {
+    margin-bottom: 64px;
+    h1 {
+      color: var(--white-50);
+      font: 700 3rem "Inter";
+      margin-bottom: 24px;
+    }
+    > ul {
+      padding:0;
+      margin:0;
+      list-style: none;
+      display: flex;
+      color: var(--gray-300);
+  
+      & li {
+        margin:0;
+        font-size:0.9rem;
+  
+        & svg {
+          margin-right: 0.5rem;
+        }
+  
+        & + li {
+          margin-left: 1.625rem;
+        }
+      }
+    }
+  }
+
+  .postContent {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    line-height: 2rem;
+    font-size: 1.225rem;
+    color: var(--white-50);
+    
+    strong {
+      color: var(--white-50);
+    }
+
+    p, ul {
+      margin:  1.5rem 0;
+      color: var(--gray-300);
+    }
+    ul {
+      padding-left: 1.5rem;
+      li {
+        margin:  0.5rem 0;
+      }
+    }
+  }
+}
